--- a/tD2_txt.tex
+++ b/tD2_txt.tex
@@ -143,7 +143,7 @@ Ein weiterer, oft nicht berücksichtigter Aspekt ist die fehlende Möglichkeit,
 Aussagen über die Leistungsfähigkeit des Netzes nach dem Ausfall eines Links zu 
 treffen. 
 
-Eine Schwierigkeit bei der Entwicklung von Routing-Verfahren die auch die oben 
+Eine Schwierigkeit bei der Entwicklung von Routing-Verfahren, die auch die oben 
 genannten Probleme berücksichtigen, ist die Vielzahl möglicher Fehlerszenarien. 
 Bei einem Netz mit 500 Links sind bei 3 Link-Fehlern schon über 20 Millionen 
 Szenarien möglich. Die Berücksichtigung jedes dieser Szenarien 
@@ -240,7 +240,7 @@ entfernt werden.
 Der Label-Stack von MPLS wird in \cite{tD2_WWMA10} zu Implementierung von R3 
 verwendet.
 
-Solgange die Urspüngliche Netztopologie besteht, kann das reguläre Routing 
+Solgange die urspüngliche Netztopologie besteht, kann das reguläre Routing 
 (d.h bereits berechnete Routen) verwendet werden. 
 Bei Link-Ausfällen ist dieses Routing nicht mehr gültig und muss angepasst 
 werden. 
@@ -438,7 +438,7 @@ Da $p$ allerdings nicht für die Topologie in diesem konkreten Fehlerfall,
 sondern auf der ursprünglichen Netztopologie definiert wurde, 
 muss $p$ zuvor entsprechend des Fehlers angepasst werden, 
 um sicherzustellen das der defekte Link $e$ nicht mehr verwendet wird.  
-Um dies zu erreichen muss lediglich eine einfache Anpassung (re-scaling) der 
+Um dies zu erreichen, muss lediglich eine einfache Anpassung (re-scaling) der 
 verbliebenen Links durchgeführt werden, die den Verkehr von $e$ nun mittragen 
 müssen. 
 Die Anpassung erfolgt nach folgender Formel:
@@ -485,7 +485,7 @@ Eine MLG besteht aus Links die vom Netzbetreiber zusammengefasst und bei
 Wartungsarbeiten zusammen abgeschaltet werden.
 R3 kann nun ergänzt werden um solche Fehlercharakteristiken zu berücksichtigen.
 
-Eine weitere Möglichkeit von R3 besteht darin unterschiedliche Verkehrsklassen 
+Eine weitere Möglichkeit von R3 besteht darin, unterschiedliche Verkehrsklassen 
 unterschiedlich zu behandeln. 
 Dazu kann für jede Klasse, die in der Regel gewissen Service Level Agreements 
 (SLA) entspricht festgelegt werden, wie viele zeitlich überlappende 
@@ -675,7 +675,7 @@ Abbildung \ref{tD2_USISPMeasurement} zeigt die in\cite{tD2_WWMA10} ermittelten
 Messergebnisse der US-ISP Topologie für alle Einzel-Fehler Events, 
 alle Zwei-Fehler Events und 1100 zufälligen Drei-Fehler Events. 
 Angegeben ist jeweils das Leistungsverhältnis für ein Szenario. 
-Die Werte wurden entsprechend ihres Leistungswertes sortiert aufsteigend 
+Die Werte wurden entsprechend ihres Leistungswertes aufsteigend 
 sortiert.
 In alle drei Grafiken lässt sich die gleiche Gruppierung erkennen. 
 OSPF+R3, OSPF+opt, MPLS+R3 liegen immer nahe beieinander und sind dem Optimum 
